Fix line number alignment on mobile devices.

--- a/app/assets/stylesheets/pre_code.sass
+++ b/app/assets/stylesheets/pre_code.sass
@@ -1,5 +1,8 @@
 @import 'bourbon'
 
+html
+  -webkit-text-size-adjust: 100% // Prevent font scaling in landscape
+
 /* Code Blocks
  * -----------
 
